<resources>
    <string name="app_name">Drunk Games</string>
    <string name="click">Нажми</string>
    <string name="pull">Тяни</string>
    <string name="scream">Кричи</string>
    <string name="shake">Тряси</string>
    <string name="pass">Передай другому!</string>
    <string name="game_started">Игра началась!</string>
    <string name="start_game">Start!</string>
    <string name="play">Play!</string>

    <string name="you_rounds_passed">%1$d rounds passed</string>
    <string name="would_you_like_to_have_beer">Would you like to have \n another beer and play again?</string>
    <string name="you_win">You win!</string>
    <string name="you_failed">You failed!</string>
    <string name="settings">Settings</string>

    <string name="mic_sensitivity">Чувствительность микрофона</string>
    <string name="acc_sensitivity">Чувствительность акселерометра</string>
    <string name="game_mode">Тип игры:</string>
    <string name="death_mode">Death mode</string>
    <string name="count_down">Count down</string>
    <string name="threshold">Порог:</string>
    <string name="check">Проверка</string>
    <string name="voice_detection_level">Уровень детектирования голоса:</string>
    <string name="accelerometr_detection_level">Уровень детектирования трясения:</string>
    <string name="current_round">Round %1$d</string>
    <string name="rounds">Rounds: </string>

    <string name="default_client_id">153625047009-jaltefelr94gaf4eqmmhidsu9o1ucgc7.apps.googleusercontent.com</string>
    <string name="sign_in">Sign In</string>
    <string name="or_create_an_account_for_your_team">or create an account for your team!</string>
</resources>
