<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <SeekBarPreference
            android:defaultValue="5"
            app:iconSpaceReserved="false"
            android:key="microphone"
            android:max="10"
            android:title="@string/mic_sensitivity" />

    <SeekBarPreference
            android:defaultValue="8"
            app:iconSpaceReserved="false"
            android:key="accelerometr"
            android:max="16"
            android:title="@string/acc_sensitivity" />

    <DropDownPreference
            android:entries="@array/entries"
            android:entryValues="@array/entry_values"
            app:iconSpaceReserved="false"
            android:key="game_mode"
            android:title="@string/game_mode"
            app:useSimpleSummaryProvider="true" />


</androidx.preference.PreferenceScreen>