<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    tools:background="#0A0000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:padding="8dp">

        <View
            android:id="@+id/circle"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_circle"
            app:layout_constraintEnd_toEndOf="@+id/bg"
            app:layout_constraintStart_toStartOf="@+id/bg"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/bg_rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_dialog"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/circle"
            app:layout_constraintStart_toStartOf="@+id/circle"
            app:layout_constraintTop_toTopOf="@+id/circle"
            app:srcCompat="@drawable/ic_death" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/you_failed"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ic_dialog"
            app:layout_constraintStart_toStartOf="@+id/ic_dialog"
            app:layout_constraintTop_toBottomOf="@+id/ic_dialog" />

        <TextView
            android:id="@+id/tv_rounds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/you_rounds_passed"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/bg"
            app:layout_constraintStart_toStartOf="@+id/bg"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_suggestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/would_you_like_to_have_beer"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_rounds"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_rounds"
            app:layout_constraintTop_toBottomOf="@+id/tv_rounds" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@android:string/cancel"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/bg"
            app:layout_constraintEnd_toStartOf="@+id/btn_ok"
            app:layout_constraintStart_toEndOf="@+id/bg"
            app:layout_constraintStart_toStartOf="@+id/bg" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@android:string/ok"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/bg"
            app:layout_constraintEnd_toEndOf="@+id/bg"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>